# invoice-utils

./: .dockerignore  .gitignore  404.html  Dockerfile  LICENSE  README.md  action.yml  entrypoint.sh  index.html  mkdocs.yml  pyproject.toml
.github/actions/run-tests-action/: action.yml
.github/workflows/: ci.yml  docs.yml  python-app-docker.yml  python-app.yml  run-tests-docker-action.yml
Requirements/: index.html
docs/: Requirements.md  index.md
search/: search_index.json
src/invoice_utils/: __init__.py  __main__.py  _engine.py  _render.py  basic.json  cli.py  config.py  depends.py  di.py  web.py
src/invoice_utils/api/: __init__.py  _errors.py  _invoices.py  _request.py  _response.py  _template.py  _templates.py
src/invoice_utils/dal/: __init__.py  _file_repo.py  _model.py  _repo.py
src/invoice_utils/engine/: __init__.py  _currency.py  _engine.py  _errors.py  _header.py
src/invoice_utils/models/: __init__.py  _invoice.py
src/invoice_utils/render/: __init__.py  _render.py
src/invoice_utils/render/templates/: basic.json  invoice.css  invoice.jinja  invoice_ro-RO.css  invoice_ro-RO.jinja
src/invoice_utils/templates/: basic.json  default_template.html
tests/: test_web.py
tests/data/: basic.json  bnr-response-1-item.xml  bnr-response-invalid.xml  bnr-sample-missing-symbols.json  bnr-sample.json  one_line.json  test_template.html
tests/invoice_utils/: conftest.py  rule_engine_basic_input_processing_test.py  rule_engine_basic_input_processing_tests.py  rule_engine_sanity_test.py  test_web.py
tests/invoice_utils/api/: conftest.py  test_template.py  test_templates.py
tests/invoice_utils/dal/: test_file_repo.py
tests/invoice_utils/engine/: rule_engine_basic_input_processing_test.py  rule_engine_compute_taxes_test.py  rule_engine_compute_totals_test.py  rule_engine_sanity_test.py  test_bnr_fx_rates.py
