[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "invoice-utils"
version = "0.3.0"
description = ""
authors = [
    "Adrian Moloce <adrian.moloce.dev@gmail.com>",
    "Andrei Olar <andrei.olar@gmail.com>",
]
license = "MIT"
packages = [
    { include = "invoice_utils", from = "src" }
]

[tool.poetry.scripts]
make-invoices = "invoice_utils.cli:run_command"

[tool.pylint.main]
py-version = [3, 12]
ignore-paths = ["tests"]
ignore-patterns = ["^\\.#", "^_.+$"]
disable = ["C0114", "R0903"]

[tool.pylint.basic]
good-names = ["i", "j", "k", "x", "y", "z", "ex", "Run", "_"]

[tool.pylint.classes]
check-protected-access-in-special-methods = true

[tool.poetry.dependencies]
python = "^3.12"
weasyprint = "^62.3"
Jinja2 = "^3.1.4"
fastapi = "^0.115.0"
uvicorn = "^0.31.0"
python-dotenv = "^1.0.1"
pydantic = "^2.9.2"
requests = "^2.32.3"
pydantic-settings = "^2.5.2"
typer = "^0.12.5"
arrow = "^1.3.0"

[tool.poetry.group.dev.dependencies]
httpx = "^0.27.2"
pytest-mock = "^3.14.0"
pytest-cov = "^5.0.0"
pytest = "^8.3.3"
mypy = "^1.11.2"
pylint = "^3.3.1"
responses = "^0.25.3"
pytest-responses = "^0.5.1"
